<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".profile.view.NewItemActivity"
    android:gravity="center_vertical">



    <EditText
        android:id="@+id/name"
        android:hint="@string/name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#ffeaeaea"
        />

    <EditText
        android:id="@+id/phoneNumber"
        android:hint="@string/phone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/name"
        android:background="#eaeaea"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        />



    <Button
        android:id="@+id/save"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/save"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/phoneNumber"/>


</RelativeLayout>