<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.view.Signup"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/app_icon"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@id/appLogo"
        android:text="Register User"/>

    <EditText
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register"
        android:layout_marginTop="20dp"
        android:background="#ffeaeaea"
        />

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username"
        android:background="#eaeaea"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        />

    <!-- Add Gender Selection -->


    <Button
        android:id="@+id/signupBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/password"/>




</RelativeLayout>